--- a/api_data_wrangling_mini_project.ipynb
+++ b/api_data_wrangling_mini_project.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = requests.get('https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?start_date=2017-01-01&end_date=2017-01-11&api_key=Et_xAdsTsGfp6cdJ9_UD')"
+    "data = requests.get('https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?start_date=2017-01-01&end_date=2017-01-11&api_key=XXXXXXXXXXXX')"
    ]
   },
   {
@@ -335,7 +335,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = requests.get('https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?start_date=2017-01-01&end_date=2017-12-31&api_key=Et_xAdsTsGfp6cdJ9_UD')"
+    "data = requests.get('https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?start_date=2017-01-01&end_date=2017-12-31&api_key=XXXXXXXXXXXXXX')"
    ]
   },
   {
